roles/openshift-applier/files/networkpolicy/allow_jenkins.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: jenkins-outside-world
spec:
  podSelector:
    matchLabels:
      name: jenkins
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 50000
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
